Footer spacing fix

--- a/style.css
+++ b/style.css
@@ -142,7 +142,7 @@
                 font-family: 'youngserifregular', 'Lora', serif;
                 font-weight: bold;
                 font-size: 34px; 
-                line-height: 1.25em; 
+                line-height: 1.15em; 
                 letter-spacing: -0.03em;
                 margin: 10px 0px; }
 
@@ -240,6 +240,7 @@
             footer { 
                 width: 100%;
                 padding: 16px 50px 0 50px;
+                margin-top: -1px;
                 z-index: 12;
                 border-top: 2px solid #222;
             }
